--- a/theme/default/css/ap.css
+++ b/theme/default/css/ap.css
@@ -355,10 +355,6 @@ body.anspress .ap-container {
     margin: 0;
     list-style: none;
 }
-.ap-container a,.ap-container a:visited{
-	color:#3e90cc
-}
-
 
 .ap-container .ap-container li {
     padding: 0;
@@ -396,7 +392,7 @@ body.anspress .ap-container {
 }
 
 .ap-avatar img {
-    background: none repeat scroll 0 0 #ddd;
+    background: #ddd;
     border-radius: 2px;
     box-shadow: none;
     display: block;
@@ -412,10 +408,9 @@ body.anspress .ap-container {
 }
 
 .ap-qmainc .ap-user-meta {
-    background: none repeat scroll 0 0 #d0e8fc;
+    background: #d0e8fc;
     border-bottom: 1px solid #afcce5;
     border-radius: 3px 3px 0 0;
-    font-size: 12px;
     margin: -10px -10px 10px;
     padding: 4px;
 }
@@ -428,10 +423,15 @@ body.anspress .ap-container {
 	color:#333;
 }
 
+.ap-cl {
+    float: left;
+    width: 70%;
+}
+
 .ap-sidebar {
-    padding-left: 20px;
-    vertical-align: top;
-    width: 250px;
+    float: left;
+    padding-left: 25px;
+    width: 30%;
 }
 
 .ap-container .question-title {
@@ -591,7 +591,7 @@ body.anspress .ap-container {
     padding: 10px;
 }
 .ap-amainc .ap-user-meta {
-    background: none repeat scroll 0 0 #f7f7f7;
+    background: #f7f7f7;
     border-bottom: 1px solid #ddd;
     border-radius: 3px 3px 0 0;
     font-size: 12px;
@@ -650,9 +650,7 @@ body.anspress .ap-container {
     text-align: center;
     width: 22px;
 }
-.anspress .ap-sicon:visited{
-	color:#fff;
-}
+
 .anspress .ap-sicon:hover, .anspress .ap-sicon.selected{
 	background: #6ab755;
 }
@@ -671,26 +669,16 @@ body.anspress .ap-container {
 }
 
 .ap-comments.have-comments {
+    border: 1px solid #eee;
+    border-radius: 3px;
     margin-left: 0;
-    padding-left: 48px;
+    margin-top: 15px;
 }
 
 #question .ap-comments {
     margin-left: 0;
-    padding-left: 50px;
-    position: relative;
 }
 
-#question .ap-comments.have-comments:before {
-    background: #eee;
-    content: "";
-    display: block;
-    height: 35px;
-    left: 23px;
-    position: absolute;
-    top: -16px;
-    width: 3px;
-}
 .ap-comments.comments-area {
     list-style: none outside none;
     margin: 0;
@@ -920,7 +908,7 @@ body.anspress .ap-container {
 }
 
 .anspress .ap-btn.ap-ask-btn-head {
-    background: none repeat scroll 0 0 #58ae44;
+    background: #58ae44;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.3) inset;
     color: #fff;
@@ -964,7 +952,7 @@ body.anspress .ap-container {
     color: #ddd;
 }
 .ap-single-vote {
-    background: none repeat scroll 0 0 #fff;
+    background: #fff;
     border-radius: 3px;
     float: right;
     padding: 5px;
@@ -1121,10 +1109,6 @@ body.modal-open {
 	padding: 0 3px;
 }
 
-.question-tags-list > a:visited{
-    color: #888;
-}
-
 .ap-container .ap-other-meta.ap-inline-list {
     font-size: 13px;
     margin-top: 5px;
@@ -1152,7 +1136,7 @@ body.modal-open {
 }
 
 .ap-container .question-list .question.status-private_question {
-    background: none repeat scroll 0 0 #f7f7f7;
+    background: #f7f7f7;
 }
 
 .anspress .question-list {
@@ -1247,20 +1231,11 @@ body.modal-open {
     text-transform: uppercase;
     width: 50px;
 }
-.ap-anstabhead {
-    border-bottom: medium none !important;
-    margin-left: 70px;
-}
 
 #answers-c .ap-answer-count {
-    background: none repeat scroll 0 0 #58ae44;
-    border-radius: 2px;
-    color: #fff;
-    font-size: 13px;
-    margin-bottom: 0;
-    padding: 2px 10px;
-    position: relative;
+    margin: 0;
 }
+
 .anspress .ap-container .ap-ans-tab li > a {
     padding: 1px 15px;
 }
@@ -1382,11 +1357,6 @@ body.modal-open {
     padding: 2px 4px;
 }
 /* tags list */
-.question-tags:before, .question-cats:before {
-    color: #AAA;
-    font-size: 10px;
-    margin-right: 5px;
-}
 
 .question-tags, .question-cats {
     display: block;
@@ -1557,15 +1527,15 @@ textarea#post_content:focus{
 
 /* pagination */
 ul.ap-pagination {
-    background: none repeat scroll 0 0 #fff;
+    background: #fff;
     border: 1px solid #ddd;
     border-radius: 3px;
     display: table;
     margin: 10px 0 0;
     padding: 0;
 }
-#answers-c ul.ap-pagination{
-	margin: 10px 0 25px 80px;
+#answers-c ul.ap-pagination {
+    margin: 0;
 }
 
 .ap-pagination li {
@@ -1894,7 +1864,7 @@ ul.ap-pagination {
 }
 
 .ap-message-item {
-    background: none repeat scroll 0 0 #fff;
+    background: #fff;
     border-radius: 2px;
     line-height: 22px;
     margin-top: 5px;
@@ -1902,7 +1872,7 @@ ul.ap-pagination {
 }
 
 .ap-message-item.success {
-    background: none repeat scroll 0 0 #dae8d8;
+    background: #dae8d8;
     border: 1px solid #92d385;
     color: #716767;
 }
@@ -1947,7 +1917,6 @@ ul.ap-pagination {
     display: none;
     left: 50%;
     margin: -120px 0 0 -160px;
-    padding: 10px;
     position: fixed;
     top: 50%;
     width: 500px;
@@ -1964,17 +1933,24 @@ ul.ap-pagination {
     background: #f2f2f2;
     border-bottom: 1px solid #ddd;
     border-radius: 3px 3px 0 0;
-    margin: -10px -10px 10px;
-    padding: 5px 15px;
+    padding: 13px;
+	margin:0;
 }
 
-.anspress .ap-modal-title span {
+.ap-modal-close {
     color: #888;
-    cursor: default;
+    cursor: pointer;
     display: block;
     float: right;
     font-size: 20px;
-    line-height: 140%;
+}
+
+.ap-modal-close:hover {
+	color:#000;
+}
+
+.ap-modal-body {
+	padding:10px;
 }
 
 .ap-container .ap-inline-list {
@@ -2104,22 +2080,11 @@ ul.ap-pagination {
     text-decoration: none;
 }
 
-.ap-icon.ap-icon-parti {
-    background: url(../images/participants.png) no-repeat scroll center center #eee;
-    border: 1px solid #ddd;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    margin-right: 20px;
-    padding: 15px;
-}
-
-.ap-icon.ap-icon-cog {
-    background: url(../images/cog.png) no-repeat scroll center center #eee;
-}
 
 /* Question page side boxes */
 .ap-question-side {
+    border-bottom: 1px solid #eee;
+    margin-bottom: 15px;
     padding: 0;
 }
 
@@ -2129,41 +2094,15 @@ ul.ap-pagination {
 }
 
 .ap-question-side .question-tags li a {
-    background: #333;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    color: #fff;
     display: inline-block;
-    font-size: 12px;
-    margin-right: 15px;
-    padding: 0 10px;
+    margin-right: 5px;
     position: relative;
     z-index: 1;
 }
 
-.ap-question-side .question-tags li a:before {
-    background: #333;
-    border: 7px solid #333;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
-    content: "";
-    position: absolute;
-    right: -6px;
-    top: 2px;
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    z-index: -1;
-}
-
 .ap-question-side .ap-question-side-title {
-    font-size: 12px;
-    line-height: 16px;
-    margin-bottom: 10px;
+    font-size: 13px;
+    margin-bottom: 6px;
     margin-top: 0;
 }
 
@@ -2228,7 +2167,7 @@ ul.ap-pagination {
 }
 
 .ap-participants-list li img {
-    background: none repeat scroll 0 0 #eee;
+    background: #eee;
     box-shadow: none;
     display: block;
 }
@@ -2322,7 +2261,7 @@ ul.ap-pagination {
     margin-right: 20px;
 }
 
-.ap-user-ffp li a, .ap-user-ffp li a:visited {
+.ap-user-ffp li a {
     border-right: 1px solid #ddd;
     display: block;
     font-size: 16px;
@@ -2392,10 +2331,6 @@ ul.ap-pagination {
     padding: 5px 10px;
     text-align: center;
     text-decoration: none;
-}
-
-.ap-profile-nav > ul > li > a:visited {
-    color: #999;
 }
 
 .ap-profile-nav > ul > li.active > a {
@@ -2502,10 +2437,6 @@ ul.ap-pagination {
     padding: 0 7px;
 }
 
-a.ap-btn.ap-success:visited {
-    color: #fff;
-}
-
 .ap-btn:before {
     margin-right: 5px;
 }
@@ -2562,10 +2493,6 @@ a.ap-btn.ap-success:visited {
     box-shadow: none;
     color: #fff;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-}
-
-.ap-btn.ap-unfollow:visited, .ap-btn.selected:visited {
-    color: #fff;
 }
 
 .ap-users-lists .ap-user {
@@ -2931,7 +2858,7 @@ form .checkbox {
 }
 
 .ap-message-search {
-    background: none repeat scroll 0 0 #fdfdfd;
+    background: #fdfdfd;
     border-bottom: 1px solid #ddd;
     border-radius: 4px 4px 0 0;
     padding: 10px;
@@ -3237,10 +3164,6 @@ form .checkbox {
     font-weight: bold;
 }
 
-.ap-user-card .user-name:visited {
-    color: #333;
-}
-
 .ap-user-card .ap-user-rank {
     color: #777;
     display: block;
@@ -3353,12 +3276,13 @@ form .checkbox {
 .ap-qaf-inner {
     display: table;
     margin: 0 auto;
+	width:100%;
 }
 
 .ap-qaf-inner > .form-control {
     float: left;
     margin-right: 10px;
-    width: 450px;
+    width: 70%;
 }
 
 .ap-qaf-inner > button {
@@ -3368,6 +3292,8 @@ form .checkbox {
     font-size: 13px;
     font-weight: bold;
     padding: 10px 30px;
+	margin-left:1%;
+	width:27%;
 }
 
 .ap-qsuggestions {
@@ -3633,50 +3559,29 @@ ul.ap-badge-item > li.ap-badge-info {
     padding: 5px 10px;
 }
 
-.ap-qtline {
-    background: none repeat scroll 0 0 #eee;
-    content: "";
-    display: block;
-    height: 100%;
-    left: 67px;
-    position: absolute;
-    top: 4px;
-    width: 3px;
-    z-index: 0;
-}
-.ap-qfooter {
-    padding-left: 25px;
-    padding-top: 1px;
-    position: relative;
-}
 .ap-qfooter .ap-qtline {
     left: 23px;
     top: 0;
 }
 .ap-tlicon {
-    background: none repeat scroll 0 0 #eee;
-    border: 3px solid #fff;
+    background: #eee;
     border-radius: 50%;
-    color: #777;
+    color: #b5b3b3;
     display: block;
+    float: left;
     font-size: 11px;
-    height: 25px;
-    left: -13px;
-    line-height: 21px;
-    position: absolute;
+    height: 22px;
+    line-height: 23px;
+    margin-right: 12px;
     text-align: center;
-    width: 25px;
+    width: 22px;
 }
 .ap-tlitem {
     border-bottom: 1px solid #eee;
-    color: #888;
-    font-size: 13px;
-    margin-top: 0;
-    padding: 12px 0 12px 25px;
-    position: relative;
+    padding: 12px 0;
 }
-.ap-amainc .ap-tlitem:last-child{
-	border-bottom:none;
+.ap-tlitem:last-child {
+    border: medium none;
 }
 .ap-tlitem .ap-tlicon {
     left: -14px;
@@ -3686,15 +3591,9 @@ ul.ap-badge-item > li.ap-badge-info {
 	font-weight:bold;
 	color:#333;
 }
-.ap-comments .ap-tlicon {
-    left: 10px;
-    top: -2px;
-}
+
 .ap-coomentcount {
-    color: #333;
     display: block;
-    font-size: 13px;
-    margin-top: 10px;
 }
 
 .ap-tlitem .ap-savatar {
@@ -3707,22 +3606,12 @@ ul.ap-badge-item > li.ap-badge-info {
     text-align: center;
 }
 .ap-account-button {
-    background: none repeat scroll 0 0 #fff;
-    border: 1px solid #ddd;
-    border-radius: 3px;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-    left: 50%;
-    margin-bottom: 10px;
-    margin-left: -200px;
-    min-width: 400px;
-    position: absolute;
-    top: 39px;
+    border: 1px solid #eee;
+    margin-bottom: 20px;
 }
-.ap-site-ac, .ap-social-ac {
-    border-radius: 4px;
-    float: left;
-    padding: 10px;
-    width: 50%;
+
+.ap-account-button h3{
+	margin:0;
 }
 .ap-site-ac > h3, .ap-social-ac > h3 {
     font-size: 13px;
@@ -3735,27 +3624,19 @@ ul.ap-badge-item > li.ap-badge-info {
     text-align: center;
 }
 .ap-social-ac {
-	background:none;
-	border:none;
+    padding: 10px;
+    text-align: center;
 }
 .anspress .ap-container .ap-site-ac a {
-    display: table;
-    margin: 0 auto 10px;
+    font-weight: bold;
     text-decoration: none;
-	width:150px;
-	font-weight:bold;
+    width: 150px;
 }
-.ap-nli-backdrop {
-    background: rgba(255, 255, 255, 0.7);
-    height: 100%;
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
+
 
 /* error, success, warning label */
 .ap-esw {
-    background: none repeat scroll 0 0 #eee;
+    background: #eee;
     border-radius: 3px;
     display: block;
     margin-bottom: 10px;
@@ -3772,7 +3653,7 @@ ul.ap-badge-item > li.ap-badge-info {
 	background:#75da7f;	
 }
 .ap-cntlabel {
-    background: none repeat scroll 0 0 #eee;
+    background: #eee;
     border-top: 1px solid #ddd;
     padding: 10px;
     text-align: center;
@@ -3803,7 +3684,7 @@ li:first-child .bullet-point {
     margin-bottom: 6px;
 }
 .private-question-label span {
-    background: none repeat scroll 0 0 #676363;
+    background: #676363;
     border-radius: 2px;
     color: #fff;
     display: inline-block;
@@ -3813,7 +3694,7 @@ li:first-child .bullet-point {
 }
 
 .ap-view-all {
-    background: none repeat scroll 0 0 #fcfcfc;
+    background: #fcfcfc;
     border: 1px solid #ddd;
     border-radius: 2px;
     display: block;
@@ -3836,4 +3717,123 @@ a.disable:hover {
 
 .question-content img {
 	max-width:100%;
+}
+
+
+@media (max-width: 480px) {
+	.ap-qaf-inner .form-control {
+		width:100%;
+	}
+}
+
+@media (max-width: 806px) {
+	.ap-qaf-inner button {
+		width:26%;
+		padding-left:21px;
+		padding-right:21px;
+	}
+}
+
+@media (max-width: 584px) {
+	.ap-qaf-inner button {
+		padding-left:19px;
+		padding-right:19px;
+	}
+}
+
+@media (max-width: 570px) {
+	.ap-qaf-inner .form-control {
+		width:100%;
+		display:block;
+	}
+	
+	.ap-qaf-inner {
+		text-align:center;
+	}
+	.ap-qaf-inner button {
+		display:inline-block;
+		margin-top:10px;
+		padding-left:3px;
+		padding-right:3px;
+	}
+}
+
+.ap-icon.ap-icon-cog:hover {
+	cursor:pointer;
+}
+
+.ap-container .avatar {
+    box-shadow: none;
+    display: block;
+}
+.ap_commnt_title {
+    border-bottom: 1px solid #f5f5f5;
+    margin-bottom: 5px;
+    padding: 6px;
+}
+
+.ap-anstabhead {
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+.ap-qfooter {
+    border: 1px solid #eee;
+    border-radius: 2px;
+    margin-top: 15px;
+    padding: 5px;
+}
+.accordion-content {
+    border-top: 1px solid #f5f5f5;
+    display: none;
+    padding: 20px;
+}
+
+.ap-ac-accordion {    
+    border-bottom: 1px solid #eee;
+}
+.ap-ac-accordion > strong {
+    background: #fcfcfc;
+    display: block;
+    padding: 10px 15px;
+}
+
+.ap-ac-accordion > strong > i {
+    background: #fff;
+    cursor: pointer;
+    font-size: 15px;
+    margin-right: 5px;
+    vertical-align: middle;
+}
+.ap-ac-accordion .ap-icon-checkbox-checked, .ap-ac-accordion.active .ap-icon-checkbox-unchecked{
+	display:none;
+}
+.ap-ac-accordion.active .ap-icon-checkbox-checked{
+	display:inline;
+}
+.anspress #wp-social-login-connect-options a {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    display: block;
+    float: left;
+    line-height: 20px;
+    margin-right: 5px;
+    padding: 5px 15px;
+	color: #fff;
+}
+.anspress #wp-social-login-connect-options {
+    display: table;
+    margin: 0 auto;
+    padding: 10px;
+}
+#wp-social-login-connect-options a.btn-facebook {
+    background: #3b5998;    
+}
+#wp-social-login-connect-options a.btn-twitter {
+    background: #55acee;
+}
+#wp-social-login-connect-options a.btn-google {
+    background: #f96161;
+}
+#wp-social-login-connect-options a.btn-linkedin {
+    background: #007bb6;
 }
