--- a/theme/default/css/main.css
+++ b/theme/default/css/main.css
@@ -2502,6 +2502,7 @@
   margin-bottom: 20px;
   margin-left: -300px;
   position: relative;
+  min-height: 20px;
 }
 #ap-notify .ap-notify-item.error {
   border-color: #eb5837;
@@ -2523,21 +2524,18 @@
 }
 #ap-notify .ap-notify-item i {
   background: #eb5837;
-  -webkit-border-radius: 50%;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 50%;
-  -moz-background-clip: padding;
-  border-radius: 50%;
-  background-clip: padding-box;
+  border-radius: 3px;
   color: #fff;
   display: block;
   float: left;
-  font-size: 15px;
-  height: 30px;
-  line-height: 36px;
+  font-size: 14px;
+  height: 15px;
+  line-height: 15px;
+  margin-left: -5px;
   margin-right: 10px;
+  padding: 3px;
   text-align: center;
-  width: 30px;
+  width: 15px;
 }
 .ap-widget-pos {
   margin-bottom: 25px;
