--- a/theme/default/less/notify.less
+++ b/theme/default/less/notify.less
@@ -21,6 +21,7 @@
 	    margin-bottom: 20px;
 	    margin-left: -300px;
 	    position: relative;
+	    min-height: 20px;
 
 	    &.error{
 	    	border-color: @error-color;
@@ -42,16 +43,18 @@
 	    }
 	    i{
 	    	background: @error-color;
-		    .border-radius(50%);
+		    border-radius: 3px;
 		    color: #fff;
 		    display: block;
 		    float: left;
-		    font-size: 15px;
-		    height: 30px;
-		    line-height: 36px;
+		    font-size: 14px;
+		    height: 15px;
+		    line-height: 15px;
+		    margin-left: -5px;
 		    margin-right: 10px;
+		    padding: 3px;
 		    text-align: center;
-		    width: 30px;
+		    width: 15px;
 	    }
 	}
 }
