--- a/theme/default/less/question.less
+++ b/theme/default/less/question.less
@@ -171,7 +171,7 @@
 		display: block;
 	    font-size: 16px;
 	    margin: 0;
-	    padding: 0;
+	    padding: 5px 0;
     	color: @default-color;
 	}
 }
