--- a/theme/default/css/main.css
+++ b/theme/default/css/main.css
@@ -1537,7 +1537,7 @@
   display: block;
   font-size: 16px;
   margin: 0;
-  padding: 0;
+  padding: 5px 0;
   color: #333333;
 }
 .ap-user-meta-display_name {
