--- a/theme/default/css/editor.css
+++ b/theme/default/css/editor.css
@@ -3,3 +3,9 @@ body{
 	line-height: 1.6;
 	font-size: 14px;
 }
+blockquote {
+    border-left: 4px solid #ddd;
+    font-family: georgia,arial,helvetica;
+    font-size: 16px;
+    padding-left: 10px;
+}
