--- a/theme/default/less/form.less
+++ b/theme/default/less/form.less
@@ -282,6 +282,29 @@
 		    margin-top: 5px;
 		}
 	}
+	.ap-avatar-upload-form{
+		.ap-upload-o{
+		    font-size: 17px;
+		    height: 30px;
+		    line-height: 18px;
+		    padding: 6px;
+		    position: relative;
+		    width: 30px;
+			> span{
+				display: none;
+			}
+		}
+		.ap-upload-input{
+			cursor: pointer;
+		    height: 100%;
+		    left: 0;
+		    opacity: 0;
+		    position: absolute;
+		    top: 0;
+		    width: 100%;
+			.opacity(0);
+		}
+	}
 }
 
 #ap-search-form {
@@ -290,4 +313,7 @@
 		vertical-align: top;
 		margin: 0;	
 	}
+}
+.screen-reader-text{
+	display: none;
 }
