--- a/theme/default/less/list.less
+++ b/theme/default/less/list.less
@@ -8,8 +8,9 @@
 		    .box-shadow(none);
 		    display: table;
 		    margin: 0;
-		    padding: 15px 0;
+		    padding: 15px 15px;
 		    width: 100%;
+		    position: relative;
 
 		    &.hentry{
 		    	margin: 0;
@@ -83,6 +84,17 @@
 		    font-size: 11px;
 		    margin: 0;
 		    padding: 0 6px;
+		}
+		&-featured{
+		    color: #d56f56;
+		    font-size: 17px;
+		    left: -20px;
+		    position: absolute;
+		    top: 14px;
+		}
+		.featured-question {
+		    background: none repeat scroll 0 0 #fffae1;
+		    border-bottom-color: #efe7bc;
 		}
 	}
 
