- Bug fix - Do not activate AnsPress if extensions are not updated.
git-svn-id: https://plugins.svn.wordpress.org/anspress-question-answer/trunk@1166334 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/theme/default/css/main.css
+++ b/theme/default/css/main.css
@@ -2128,6 +2128,16 @@
 #anspress .ap-editor .mce-toolbar.mce-first.mce-stack-layout-item {
   margin-right: 36px;
 }
+#anspress .ap-editor textarea.wp-editor-area {
+  background: none repeat scroll 0 0 #ffffff;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.05) inset;
+}
+#anspress .ap-editor .quicktags-toolbar input.button.button-small {
+  background: none repeat scroll 0 0 #f8f8f8;
+  border: 1px solid #ddd;
+  color: #333;
+}
 #anspress .btn-submit-ans {
   padding: 10px 20px;
 }
