--- a/theme/default/less/form.less
+++ b/theme/default/less/form.less
@@ -200,6 +200,16 @@
 		.mce-toolbar.mce-first.mce-stack-layout-item {
 		    margin-right: 36px;
 		}
+		textarea.wp-editor-area {
+		    background: none repeat scroll 0 0 #ffffff;
+		    border: 1px solid #ddd;
+		    box-shadow: 0 0 2px rgba(0, 0, 0, 0.05) inset;
+		}
+		.quicktags-toolbar input.button.button-small{
+		    background: none repeat scroll 0 0 #f8f8f8;
+		    border: 1px solid #ddd;
+		    color: #333;
+		}
 	}
 
 	.btn-submit-ans{
