--- a/theme/default/less/form.less
+++ b/theme/default/less/form.less
@@ -24,6 +24,9 @@
 		    height: auto;
 	    }
 	}
+	textarea.ap-form-control{
+		height: auto;
+	}
 	label > input[type="checkbox"] {
 	    float: left;
 	    margin-right: 10px !important;
