Fix font awesome conflict
git-svn-id: https://plugins.svn.wordpress.org/anspress-question-answer/trunk@1193973 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/theme/default/fonts/style.css
+++ b/theme/default/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'anspress';
-	src:url('fonts/anspress.eot?-r2jrt9');
-	src:url('fonts/anspress.eot?#iefix-r2jrt9') format('embedded-opentype'),
-		url('fonts/anspress.ttf?-r2jrt9') format('truetype'),
-		url('fonts/anspress.woff?-r2jrt9') format('woff'),
-		url('fonts/anspress.svg?-r2jrt9#anspress') format('svg');
+	src:url('fonts/anspress.eot?-rdrqlm');
+	src:url('fonts/anspress.eot?#iefix-rdrqlm') format('embedded-opentype'),
+		url('fonts/anspress.ttf?-rdrqlm') format('truetype'),
+		url('fonts/anspress.woff?-rdrqlm') format('woff'),
+		url('fonts/anspress.svg?-rdrqlm#anspress') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,197 +24,197 @@
 }
 
 .apicon-answer:before {
-	content: "\e61f";
+	content: "\e900";
 }
 .apicon-question:before {
-	content: "\e620";
+	content: "\e901";
 }
 .apicon-rank:before {
-	content: "\e61a";
+	content: "\e902";
 }
 .apicon-anspress:before {
-	content: "\e604";
+	content: "\e903";
 }
 .apicon-anspress-icon:before {
-	content: "\e605";
+	content: "\e904";
 }
 .apicon-pencil:before {
-	content: "\e61e";
+	content: "\e905";
 }
 .apicon-users:before {
-	content: "\e614";
+	content: "\e906";
 }
 .apicon-user-check:before {
-	content: "\e615";
+	content: "\e907";
 }
 .apicon-user-minus:before {
-	content: "\e616";
+	content: "\e908";
 }
 .apicon-user-plus:before {
-	content: "\e617";
+	content: "\e909";
 }
 .apicon-user:before {
-	content: "\e618";
+	content: "\e90a";
 }
 .apicon-profile:before {
-	content: "\e619";
+	content: "\e90b";
 }
 .apicon-reputation:before {
-	content: "\e612";
+	content: "\e90c";
 }
 .apicon-screen-normal:before {
-	content: "\e609";
+	content: "\e90d";
 }
 .apicon-screen-full:before {
-	content: "\e60a";
+	content: "\e90e";
 }
 .apicon-alert:before {
-	content: "\f02d";
+	content: "\e90f";
 }
 .apicon-bug:before {
-	content: "\f091";
+	content: "\e910";
 }
 .apicon-calendar:before {
-	content: "\f068";
+	content: "\e911";
 }
 .apicon-check:before {
-	content: "\f03a";
+	content: "\e912";
 }
 .apicon-clock:before {
-	content: "\f046";
+	content: "\e913";
 }
 .apicon-cloud-upload:before {
-	content: "\f00c";
+	content: "\e914";
 }
 .apicon-ellipsis:before {
-	content: "\f09a";
+	content: "\e915";
 }
 .apicon-eye:before {
-	content: "\f04e";
+	content: "\e916";
 }
 .apicon-gear:before {
-	content: "\f02f";
+	content: "\e917";
 }
 .apicon-gist-secret:before {
-	content: "\f08c";
+	content: "\e918";
 }
 .apicon-globe:before {
-	content: "\f0b6";
+	content: "\e919";
 }
 .apicon-heart:before {
-	content: "\2665";
+	content: "\e91a";
 }
 .apicon-link:before {
-	content: "\f05c";
+	content: "\e91b";
 }
 .apicon-lock:before {
-	content: "\f06a";
+	content: "\e91c";
 }
 .apicon-mail:before {
-	content: "\f03b";
+	content: "\e91d";
 }
 .apicon-mail-read:before {
-	content: "\f03c";
+	content: "\e91e";
 }
 .apicon-mark-github:before {
-	content: "\f00a";
+	content: "\e91f";
 }
 .apicon-mention:before {
-	content: "\f0be";
+	content: "\e920";
 }
 .apicon-mortar-board:before {
-	content: "\f0d7";
+	content: "\e921";
 }
 .apicon-mute:before {
-	content: "\f080";
+	content: "\e922";
 }
 .apicon-pin:before {
-	content: "\f041";
+	content: "\e923";
 }
 .apicon-plus:before {
-	content: "\f05d";
+	content: "\e924";
 }
 .apicon-pulse:before {
-	content: "\f085";
+	content: "\e925";
 }
 .apicon-puzzle:before {
-	content: "\f0c0";
+	content: "\e926";
 }
 .apicon-rss:before {
-	content: "\f034";
+	content: "\e927";
 }
 .apicon-search:before {
-	content: "\f02e";
+	content: "\e928";
 }
 .apicon-star:before {
-	content: "\f02a";
+	content: "\e929";
 }
 .apicon-stop:before {
-	content: "\f08f";
+	content: "\e92a";
 }
 .apicon-sync:before {
-	content: "\f087";
+	content: "\e92b";
 }
 .apicon-trashcan:before {
-	content: "\f0d0";
+	content: "\e92c";
 }
 .apicon-unmute:before {
-	content: "\f0ba";
+	content: "\e92d";
 }
 .apicon-x:before {
-	content: "\f081";
+	content: "\e92e";
 }
 .apicon-google-plus-square:before {
-	content: "\e61b";
+	content: "\e92f";
 }
 .apicon-twitter-square:before {
-	content: "\e61c";
+	content: "\e930";
 }
 .apicon-facebook-square:before {
-	content: "\e61d";
+	content: "\e931";
 }
 .apicon-toggle-on:before {
-	content: "\e60f";
+	content: "\e932";
 }
 .apicon-toggle-off:before {
-	content: "\e610";
+	content: "\e933";
 }
 .apicon-image:before {
-	content: "\e608";
+	content: "\e934";
 }
 .apicon-category:before {
-	content: "\e606";
+	content: "\e935";
 }
 .apicon-tag:before {
-	content: "\e607";
+	content: "\e936";
 }
 .apicon-comments:before {
-	content: "\e603";
+	content: "\e937";
 }
 .apicon-board:before {
-	content: "\e613";
+	content: "\e938";
 }
 .apicon-home:before {
-	content: "\e611";
+	content: "\e939";
 }
 .apicon-thumbs-up-down:before {
-	content: "\e600";
+	content: "\e93a";
 }
 .apicon-thumb-up:before {
-	content: "\e601";
+	content: "\e93b";
 }
 .apicon-thumb-down:before {
-	content: "\e602";
+	content: "\e93c";
 }
 .apicon-chevron-down:before {
-	content: "\e60d";
+	content: "\e93d";
 }
 .apicon-chevron-up:before {
-	content: "\e60e";
+	content: "\e93e";
 }
 .apicon-chevron-right:before {
-	content: "\e60b";
+	content: "\e93f";
 }
 .apicon-chevron-left:before {
-	content: "\e60c";
+	content: "\e940";
 }
