--- a/theme/default/less/reset.less
+++ b/theme/default/less/reset.less
@@ -7,6 +7,7 @@
     font-size: 14px;
     line-height: 1.4;
     word-wrap: break-word;
+    background: #fff;
     ul{
     	line-height: 1.4;
     }
@@ -47,7 +48,7 @@
 			float: left;
 			list-style: none outside none;
 			margin: 0 5px 0 0;
-			padding: 0;	    
+			padding: 0;
 			&:last-child{
 				margin-right:0;
 			}
