--- a/theme/default/less/tip.less
+++ b/theme/default/less/tip.less
@@ -6,8 +6,9 @@
 	background: @tooltip-bg;
 	font-size: 11px;
 	font-family: arial, helvetica, sans-serif;
+	max-width:200px;
 	.tooltipster-content{
-		font-size: 13px;
+		font-size: 12px;
 		a{
 			font-weight: @bold;
 			text-decoration: none;
@@ -34,5 +35,5 @@
 		    	border-bottom: none;
 		    }
 		}
-	}	
+	}
 }
