--- a/theme/default/less/widget.less
+++ b/theme/default/less/widget.less
@@ -49,6 +49,17 @@
 		    &:before{
 		    	margin-right: 10px;
 		    }
+		    .counter {
+			    background: none repeat scroll 0 0 #ff3737;
+			    border-radius: 2px;
+			    color: #fff;
+			    font-size: 10px;
+			    margin-left: 5px;
+			    padding: 1px 2px;
+			    width: 13px;
+			    display: inline-block;
+			    text-align: center;
+			}
     	}
     }
 }
@@ -99,7 +110,7 @@
 }
 .ap-widget-pos, .widget{
 	margin-bottom: 25px;
-	
+
 	.ap-rq-widget{
 		.ap-rq-post {
 		    border-bottom: 1px solid #f7f7f7;
@@ -126,7 +137,7 @@
 		    margin-bottom: 5px;
 		}
 	}
-		
+
 	.ap-followers-widget{
 	    border: 1px solid #eee;
 	    border-radius: 2px;
