--- a/theme/default/less/list.less
+++ b/theme/default/less/list.less
@@ -104,7 +104,9 @@
 		    border-bottom-color: #efe7bc;
 		}
 	}
-
+	.ap-list-counts{
+		float: right;
+	}
 	.ap-display-meta-item{
 		&:before {
 		    background: #dadada;
@@ -141,6 +143,9 @@
 		    &:visited{
 		    	color: #fff;
 		    }
+		}
+		.ap-search-form{
+			float: left;
 		}
 	}
 	#ap-question-sorting{
