--- a/theme/default/less/reset.less
+++ b/theme/default/less/reset.less
@@ -146,11 +146,12 @@
 		text-align: center;
 	}
 	.ap-please-login {
-		background: none repeat scroll 0 0 #e0fbff;
-		border-radius: 3px;
-		margin-bottom: 20px;
-		padding: 15px;
-		text-align: center;
+	    border: 2px solid #eee;
+	    border-radius: 3px;
+	    display: table;
+	    margin: 20px auto 0;
+	    padding: 6px 10px;
+	    text-align: center;
 	}
 	.ap-questions-tab, .ap-answers-tab{
 		background: #fff;
