--- a/theme/default/css/main.css
+++ b/theme/default/css/main.css
@@ -1054,10 +1054,11 @@
   text-align: center;
 }
 #anspress .ap-please-login {
-  background: none repeat scroll 0 0 #e0fbff;
+  border: 2px solid #eee;
   border-radius: 3px;
-  margin-bottom: 20px;
-  padding: 15px;
+  display: table;
+  margin: 20px auto 0;
+  padding: 6px 10px;
   text-align: center;
 }
 #anspress .ap-questions-tab,
@@ -1411,6 +1412,9 @@ body ul ul#ap-user-menu-link li > a .count {
   background: none repeat scroll 0 0 #fffae1;
   border-bottom-color: #efe7bc;
 }
+#anspress .ap-list-counts {
+  float: right;
+}
 #anspress .ap-display-meta-item:before {
   background: #dadada;
   border-radius: 50%;
@@ -1445,6 +1449,9 @@ body ul ul#ap-user-menu-link li > a .count {
 }
 #anspress .ap-list-head .ap-btn-ask:visited {
   color: #fff;
+}
+#anspress .ap-list-head .ap-search-form {
+  float: left;
 }
 #anspress #ap-question-sorting {
   border: 1px solid #ddd;
@@ -1542,6 +1549,7 @@ body ul ul#ap-user-menu-link li > a .count {
 #anspress .ap-q .ap-avatar {
   margin-right: 0x;
   position: absolute;
+  float: left;
 }
 #anspress .ap-q-head {
   margin-bottom: 20px;
@@ -1686,11 +1694,12 @@ body ul ul#ap-user-menu-link li > a .count {
   font-size: 12px;
 }
 #anspress .ap-answers-label {
-  display: block;
-  font-size: 16px;
-  margin: 0;
-  padding: 5px 0;
   color: #333333;
+  display: block;
+  font-size: 20px;
+  line-height: 100%;
+  margin: 0 15px 0 0;
+  padding: 4px 0;
   white-space: nowrap;
 }
 .ap-content .ap-question-actions-history {
@@ -1749,10 +1758,6 @@ body ul ul#ap-user-menu-link li > a .count {
 #ap-best-answer .type-answer {
   margin-top: 20px;
 }
-#answers .type-answer:first-child,
-#ap-best-answer .type-answer:first-child {
-  margin-top: 0;
-}
 #answers .type-answer.active .ap-a-cells,
 #ap-best-answer .type-answer.active .ap-a-cells {
   border-color: #6AB17F;
@@ -1779,7 +1784,7 @@ body ul ul#ap-user-menu-link li > a .count {
   margin-top: 30px;
 }
 #ap-answers-c .ap-answers-tab {
-  margin-top: 7px;
+  margin-top: 0;
 }
 #ap-answers-c .ap-answers-tab > li a {
   font-size: 12px;
