--- a/theme/default/less/question.less
+++ b/theme/default/less/question.less
@@ -10,6 +10,7 @@
 		.ap-avatar{
 			margin-right: 0x;
     		position: absolute;
+    		float: left;
 		}
 
 		&-head{
@@ -19,7 +20,7 @@
 		    border: 1px solid rgba(0, 0, 0, 0.1);
 		    border-radius: 3px;
 		    margin-left: 70px;
-		    padding: 10px;  
+		    padding: 10px;
 		    font-size: 14px;
 		}
 		&-metas{
@@ -58,7 +59,7 @@
 			    margin-left: 0;
 			    margin-top: 0;
 			    line-height: 1.2;
-		    }	    
+		    }
 		    .ap-action-favorite .favorite-btn {
 			    margin-top: -2px;
 			    padding: 1px 5px;
@@ -108,7 +109,7 @@
 		    .ap-action-select_answer a{
 		    	color: #fff;
 		    }
-	    	
+
 		}
 	}
 
@@ -155,7 +156,7 @@
 	    }
 	}
 	.ap-user-meta{
-	    
+
 		a{
 			color: @link-color;
 		}
@@ -164,14 +165,15 @@
 		    font-size: 12px;
 		}
 	}
-	
+
 	.ap-answers-label{
-		display: block;
-	    font-size: 16px;
-	    margin: 0;
-	    padding: 5px 0;
-    	color: @default-color;
-    	white-space: nowrap;
+	    color: @default-color;
+	    display: block;
+	    font-size: 20px;
+	    line-height: 100%;
+	    margin: 0 15px 0 0;
+	    padding: 4px 0;
+	    white-space: nowrap;
 	}
 }
 
@@ -180,7 +182,7 @@
 	.ap-question-actions-history{
 		margin-bottom:20px;
 	}
-	
+
 	.ap-posted-in {
 	    margin-bottom: -20px;
 	    text-transform: uppercase;
@@ -200,7 +202,7 @@
 	}
 
 }
-.ap-post-tags {	
+.ap-post-tags {
 	li a{
 	    background: @blue-color;
 	    border-radius: 10px;
@@ -213,7 +215,7 @@
 	    text-decoration: none;
 
 	    .tax-count{
-	    	font-style: normal;		    	
+	    	font-style: normal;
 	    }
 
 	    &:hover{
@@ -240,9 +242,6 @@
 	}
 	.type-answer{
 		margin-top: 20px;
-		&:first-child{
-			margin-top:0;
-		}
 		&.active .ap-a-cells{
 			border-color: #6AB17F;
 		}
@@ -269,7 +268,7 @@
 #ap-answers-c {
     margin-top: 30px;
     .ap-answers-tab {
-    	margin-top: 7px;
+    	margin-top: 0;
 
     	> li a{
 		    font-size: 12px;
@@ -278,7 +277,7 @@
 	    li.active a{
 	    	padding: 6px 12px;
 	    }
-    }    
+    }
 }
 .ap-participants-list{
 	display: block;
