--- a/theme/default/less/reset.less
+++ b/theme/default/less/reset.less
@@ -339,6 +339,7 @@ ul #ap-user-menu-anchor{
 	img{
 	    border-radius: 0;
 	    display: inline;
+	    height: auto;
 	    margin-right: 5px;
 	    vertical-align: text-bottom;
 	    width: 20px;
