--- a/theme/default/less/user.less
+++ b/theme/default/less/user.less
@@ -257,21 +257,30 @@
 			}
 		}
 		&-stats{
-		    border: 1px solid #eee;
 		    list-style: outside none none;
+		    padding: 0;
+		    margin: 0;
 			li{
-			    border-bottom: 1px solid #eee;
-			    font-size: 12px;
+			    float: left;
+			    font-size: 14px;
 			    margin: 0;
-			    padding: 15px;
-			    font-weight: 600;
+			    padding: 0;
+			    width: 50%;
 
 			    &:last-child{
 			    	border-bottom: none;
 			    }
 			    i{
-			    	margin-right: 10px;
+				    color: #888;
+				    display: inline-block;
+				    margin-right: 10px;
+				    width: 17px;
 			    }
+			    .ap-about-stats-item {
+				    border-radius: 2px;
+				    margin-bottom: 10px;
+				    padding: 2px;
+				}
 			}
 		}
 
